# kano-agent

./: .env.example  .gitignore  README.md  agent.yaml  example_input.json  main.py  orchestrator.py  pyproject.toml
analysis/: agent.py  prompts.py  schema.py
classification/: agent.py  prompts.py  schema.py
report/: renderer.py  template.html
tests/: test_kano.py
